--- a/api/package.json
+++ b/api/package.json
@@ -11,5 +11,8 @@
     "@types/node": "^20.11.8",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "fastify": "^4.25.2"
   }
 }
