--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,8 @@
     "dev": "cross-env NODE_ENV=development tsx watch --clear-screen=false src/server.ts",
     "build": "tsup src --out-dir build",
     "start": "node build/server.js",
-    "lint": "eslint src --fix"
+    "lint": "eslint src --fix",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "wesley_freit",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.8",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "cross-env": "^7.0.3",
@@ -26,9 +28,11 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.4",
+    "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.1",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.2.2"
   }
 }
