--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,8 @@
     "build": "tsup src --out-dir build",
     "start": "node build/server.js",
     "lint": "eslint src --fix",
-    "test": "vitest"
+    "test": "vitest",
+    "knex": "node --import tsx node_modules/knex/bin/cli.js"
   },
   "keywords": [],
   "author": "wesley_freit",
@@ -16,6 +17,8 @@
   "dependencies": {
     "dotenv": "^16.4.1",
     "fastify": "^4.25.2",
+    "knex": "^3.1.0",
+    "pg": "^8.11.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -28,6 +31,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.4",
+    "sqlite3": "^5.1.7",
     "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.1",
