--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,8 @@
   "license": "MIT",
   "dependencies": {
     "@fastify/jwt": "^8.0.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.1",
     "fastify": "^4.25.2",
     "knex": "^3.1.0",
