refactor: separate cross-env dev to knex script and create knex-dev script

--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,8 @@
     "start": "node build/server.js",
     "lint": "eslint src --fix",
     "test": "vitest",
-    "knex": "cross-env NODE_ENV=development node --import tsx node_modules/knex/bin/cli.js"
+    "knex": "node --import tsx node_modules/knex/bin/cli.js",
+    "knex-dev": "cross-env NODE_ENV=development node --import tsx node_modules/knex/bin/cli.js"
   },
   "keywords": [],
   "author": "wesley_freit",
