refactor: define test script to run once and no-parallelism-file test

--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
     "build": "tsup src --out-dir build",
     "start": "node build/server.js",
     "lint": "eslint src --fix",
-    "test": "vitest",
+    "test": "vitest --run --no-file-parallelism",
     "knex": "node --import tsx node_modules/knex/bin/cli.js",
     "knex-dev": "cross-env NODE_ENV=development node --import tsx node_modules/knex/bin/cli.js"
   },
